--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 26 22:05:04 2018</p>
+         Last Run: Thu Jul 26 23:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>22</td>
                         <td>22</td>
                         <td>1</td>
-                        <td>42</td>
+                        <td>41</td>
                         <td>4</td>
-                        <td>8</td>
-                        <td>W</td>
-                        <td>17</td>
+                        <td>10</td>
+                        <td>WNW</td>
+                        <td>13</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -48,9 +48,9 @@
                         <td>2</td>
                         <td>36</td>
                         <td>5</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>NE</td>
-                        <td>24</td>
+                        <td>22</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>24</td>
                         <td>24</td>
                         <td>2</td>
-                        <td>34</td>
+                        <td>33</td>
                         <td>6</td>
-                        <td>8</td>
-                        <td>ENE</td>
-                        <td>23</td>
+                        <td>10</td>
+                        <td>NE</td>
+                        <td>22</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -73,7 +73,7 @@
                         <td>32</td>
                         <td>7</td>
                         <td>10</td>
-                        <td>ENE</td>
+                        <td>NE</td>
                         <td>23</td>
                      </tr>
                      <tr>
@@ -86,7 +86,7 @@
                         <td>6</td>
                         <td>11</td>
                         <td>NNE</td>
-                        <td>25</td>
+                        <td>20</td>
                      </tr>
                   </tbody>
                </table>
@@ -214,9 +214,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "42",
+                 "41",
                  "36",
-                 "34",
+                 "33",
                  "32",
                  "31"
                ]
@@ -226,11 +226,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "17",
-                 "24",
+                 "13",
+                 "22",
+                 "22",
                  "23",
-                 "23",
-                 "25"
+                 "20"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 26 22:05:04 2018</p>
+         Last Run: Thu Jul 26 23:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
