--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 27 00:05:04 2018</p>
+         Last Run: Fri Jul 27 01:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -33,11 +33,11 @@
                         <td>Clear</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>1</td>
+                        <td>0</td>
                         <td>41</td>
                         <td>4</td>
-                        <td>10</td>
-                        <td>WNW</td>
+                        <td>8</td>
+                        <td>NW</td>
                         <td>13</td>
                      </tr>
                      <tr>
@@ -48,33 +48,33 @@
                         <td>2</td>
                         <td>36</td>
                         <td>5</td>
-                        <td>10</td>
-                        <td>NE</td>
-                        <td>22</td>
+                        <td>8</td>
+                        <td>NNE</td>
+                        <td>21</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Clear</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>2</td>
+                        <td>1</td>
                         <td>33</td>
                         <td>6</td>
                         <td>10</td>
-                        <td>NE</td>
-                        <td>22</td>
+                        <td>NNE</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Clear</td>
-                        <td>24</td>
-                        <td>24</td>
-                        <td>2</td>
-                        <td>32</td>
+                        <td>25</td>
+                        <td>25</td>
+                        <td>1</td>
+                        <td>31</td>
                         <td>7</td>
                         <td>10</td>
                         <td>NE</td>
-                        <td>23</td>
+                        <td>24</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -82,9 +82,9 @@
                         <td>25</td>
                         <td>25</td>
                         <td>1</td>
-                        <td>31</td>
+                        <td>30</td>
                         <td>6</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>NNE</td>
                         <td>20</td>
                      </tr>
@@ -135,7 +135,7 @@
                  "22",
                  "23",
                  "24",
-                 "24",
+                 "25",
                  "25"
                ]
              },
@@ -148,7 +148,7 @@
                  "22",
                  "23",
                  "24",
-                 "24",
+                 "25",
                  "25"
                ]
              }
@@ -202,10 +202,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
+                 "0",
+                 "2",
                  "1",
-                 "2",
-                 "2",
-                 "2",
+                 "1",
                  "1"
                ]
              },
@@ -217,8 +217,8 @@
                  "41",
                  "36",
                  "33",
-                 "32",
-                 "31"
+                 "31",
+                 "30"
                ]
              },
              {
@@ -227,9 +227,9 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "13",
-                 "22",
-                 "22",
+                 "21",
                  "23",
+                 "24",
                  "20"
                ]
              }
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 27 00:05:04 2018</p>
+         Last Run: Fri Jul 27 01:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -268,51 +268,51 @@
                   <tbody>
                      <tr>
                         <td>06:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
+                        <td>Partly Cloudy</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>32</td>
+                        <td>5</td>
                         <td>47</td>
                         <td>2</td>
                         <td>14</td>
                         <td>E</td>
-                        <td>52</td>
+                        <td>53</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
+                        <td>Partly Cloudy</td>
                         <td>23</td>
                         <td>23</td>
-                        <td>33</td>
+                        <td>6</td>
                         <td>49</td>
                         <td>1</td>
                         <td>14</td>
                         <td>E</td>
-                        <td>56</td>
+                        <td>53</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
+                        <td>Partly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>34</td>
-                        <td>54</td>
+                        <td>7</td>
+                        <td>52</td>
                         <td>0</td>
                         <td>16</td>
                         <td>ENE</td>
-                        <td>64</td>
+                        <td>57</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
-                        <td>20</td>
-                        <td>20</td>
-                        <td>31</td>
-                        <td>62</td>
+                        <td>Mostly Cloudy</td>
+                        <td>21</td>
+                        <td>21</td>
+                        <td>14</td>
+                        <td>59</td>
                         <td>0</td>
                         <td>14</td>
                         <td>ENE</td>
-                        <td>68</td>
+                        <td>60</td>
                      </tr>
                   </tbody>
                </table>
@@ -360,7 +360,7 @@
                  "24",
                  "23",
                  "22",
-                 "20"
+                 "21"
                ]
              },
              {
@@ -372,7 +372,7 @@
                  "24",
                  "23",
                  "22",
-                 "20"
+                 "21"
                ]
              }
            ]
@@ -424,10 +424,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "32",
-                 "33",
-                 "34",
-                 "31"
+                 "5",
+                 "6",
+                 "7",
+                 "14"
                ]
              },
              {
@@ -437,8 +437,8 @@
                "data":[
                  "47",
                  "49",
-                 "54",
-                 "62"
+                 "52",
+                 "59"
                ]
              },
              {
@@ -446,10 +446,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "52",
-                 "56",
-                 "64",
-                 "68"
+                 "53",
+                 "53",
+                 "57",
+                 "60"
                ]
              }
            ]
