--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 27 03:05:04 2018</p>
+         Last Run: Fri Jul 27 04:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -31,13 +31,13 @@
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>21</td>
-                        <td>21</td>
-                        <td>1</td>
-                        <td>42</td>
+                        <td>22</td>
+                        <td>22</td>
+                        <td>0</td>
+                        <td>41</td>
                         <td>4</td>
                         <td>8</td>
-                        <td>WNW</td>
+                        <td>W</td>
                         <td>13</td>
                      </tr>
                      <tr>
@@ -45,43 +45,43 @@
                         <td>Clear</td>
                         <td>23</td>
                         <td>23</td>
-                        <td>2</td>
-                        <td>37</td>
+                        <td>0</td>
+                        <td>36</td>
                         <td>5</td>
                         <td>8</td>
-                        <td>NNE</td>
-                        <td>19</td>
+                        <td>ENE</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Clear</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>2</td>
-                        <td>34</td>
+                        <td>0</td>
+                        <td>32</td>
                         <td>6</td>
                         <td>8</td>
-                        <td>NE</td>
-                        <td>22</td>
+                        <td>ENE</td>
+                        <td>18</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Clear</td>
-                        <td>24</td>
-                        <td>24</td>
-                        <td>2</td>
-                        <td>32</td>
+                        <td>25</td>
+                        <td>25</td>
+                        <td>0</td>
+                        <td>31</td>
                         <td>7</td>
                         <td>10</td>
-                        <td>ENE</td>
-                        <td>24</td>
+                        <td>E</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Clear</td>
-                        <td>24</td>
-                        <td>24</td>
-                        <td>2</td>
+                        <td>25</td>
+                        <td>25</td>
+                        <td>1</td>
                         <td>30</td>
                         <td>6</td>
                         <td>10</td>
@@ -132,11 +132,11 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "21",
+                 "22",
                  "23",
                  "24",
-                 "24",
-                 "24"
+                 "25",
+                 "25"
                ]
              },
              {
@@ -145,11 +145,11 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "21",
+                 "22",
                  "23",
                  "24",
-                 "24",
-                 "24"
+                 "25",
+                 "25"
                ]
              }
            ]
@@ -202,11 +202,11 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "1",
-                 "2",
-                 "2",
-                 "2",
-                 "2"
+                 "0",
+                 "0",
+                 "0",
+                 "0",
+                 "1"
                ]
              },
              {
@@ -214,10 +214,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "42",
-                 "37",
-                 "34",
+                 "41",
+                 "36",
                  "32",
+                 "31",
                  "30"
                ]
              },
@@ -227,9 +227,9 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "13",
-                 "19",
-                 "22",
-                 "24",
+                 "16",
+                 "18",
+                 "23",
                  "23"
                ]
              }
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 27 03:05:04 2018</p>
+         Last Run: Fri Jul 27 04:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -269,50 +269,50 @@
                      <tr>
                         <td>06:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>24</td>
-                        <td>24</td>
+                        <td>23</td>
+                        <td>23</td>
                         <td>3</td>
-                        <td>45</td>
+                        <td>46</td>
                         <td>2</td>
-                        <td>14</td>
-                        <td>E</td>
-                        <td>52</td>
+                        <td>13</td>
+                        <td>ESE</td>
+                        <td>54</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>23</td>
-                        <td>23</td>
-                        <td>5</td>
-                        <td>47</td>
+                        <td>22</td>
+                        <td>22</td>
+                        <td>4</td>
+                        <td>48</td>
                         <td>1</td>
                         <td>14</td>
                         <td>E</td>
-                        <td>51</td>
+                        <td>49</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>6</td>
-                        <td>51</td>
+                        <td>5</td>
+                        <td>53</td>
                         <td>0</td>
                         <td>14</td>
                         <td>E</td>
-                        <td>54</td>
+                        <td>46</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>21</td>
-                        <td>21</td>
+                        <td>20</td>
+                        <td>20</td>
                         <td>15</td>
-                        <td>57</td>
+                        <td>60</td>
                         <td>0</td>
                         <td>14</td>
                         <td>E</td>
-                        <td>57</td>
+                        <td>43</td>
                      </tr>
                   </tbody>
                </table>
@@ -357,10 +357,10 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "24",
                  "23",
                  "22",
-                 "21"
+                 "22",
+                 "20"
                ]
              },
              {
@@ -369,10 +369,10 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "24",
                  "23",
                  "22",
-                 "21"
+                 "22",
+                 "20"
                ]
              }
            ]
@@ -425,8 +425,8 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "3",
+                 "4",
                  "5",
-                 "6",
                  "15"
                ]
              },
@@ -435,10 +435,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "45",
-                 "47",
-                 "51",
-                 "57"
+                 "46",
+                 "48",
+                 "53",
+                 "60"
                ]
              },
              {
@@ -446,10 +446,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "52",
-                 "51",
                  "54",
-                 "57"
+                 "49",
+                 "46",
+                 "43"
                ]
              }
            ]
