--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 27 06:05:07 2018</p>
+         Last Run: Fri Jul 27 07:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -38,43 +38,43 @@
                         <td>4</td>
                         <td>6</td>
                         <td>W</td>
-                        <td>13</td>
+                        <td>12</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
                         <td>23</td>
                         <td>23</td>
-                        <td>0</td>
+                        <td>1</td>
                         <td>36</td>
                         <td>5</td>
                         <td>8</td>
                         <td>E</td>
-                        <td>15</td>
+                        <td>17</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Clear</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>0</td>
-                        <td>33</td>
+                        <td>1</td>
+                        <td>32</td>
                         <td>6</td>
-                        <td>8</td>
-                        <td>ENE</td>
-                        <td>17</td>
+                        <td>6</td>
+                        <td>E</td>
+                        <td>20</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Clear</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>0</td>
+                        <td>1</td>
                         <td>31</td>
                         <td>7</td>
                         <td>10</td>
-                        <td>E</td>
-                        <td>22</td>
+                        <td>ESE</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -203,9 +203,9 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "0",
-                 "0",
-                 "0",
-                 "0",
+                 "1",
+                 "1",
+                 "1",
                  "1"
                ]
              },
@@ -216,7 +216,7 @@
                "data":[
                  "41",
                  "36",
-                 "33",
+                 "32",
                  "31",
                  "30"
                ]
@@ -226,10 +226,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "13",
-                 "15",
+                 "12",
                  "17",
-                 "22",
+                 "20",
+                 "23",
                  "29"
                ]
              }
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 27 06:05:07 2018</p>
+         Last Run: Fri Jul 27 07:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -268,51 +268,51 @@
                   <tbody>
                      <tr>
                         <td>06:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>23</td>
                         <td>23</td>
-                        <td>3</td>
-                        <td>46</td>
+                        <td>0</td>
+                        <td>47</td>
                         <td>2</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>50</td>
+                        <td>71</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>23</td>
-                        <td>23</td>
-                        <td>3</td>
-                        <td>48</td>
+                        <td>Mostly Cloudy</td>
+                        <td>22</td>
+                        <td>22</td>
+                        <td>1</td>
+                        <td>49</td>
                         <td>1</td>
                         <td>14</td>
-                        <td>E</td>
-                        <td>47</td>
+                        <td>ESE</td>
+                        <td>64</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>5</td>
-                        <td>52</td>
+                        <td>2</td>
+                        <td>53</td>
                         <td>0</td>
                         <td>14</td>
                         <td>E</td>
-                        <td>45</td>
+                        <td>57</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>14</td>
+                        <td>10</td>
                         <td>60</td>
                         <td>0</td>
                         <td>14</td>
                         <td>E</td>
-                        <td>43</td>
+                        <td>50</td>
                      </tr>
                   </tbody>
                </table>
@@ -358,7 +358,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "23",
-                 "23",
+                 "22",
                  "22",
                  "20"
                ]
@@ -370,7 +370,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "23",
-                 "23",
+                 "22",
                  "22",
                  "20"
                ]
@@ -424,10 +424,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "3",
-                 "3",
-                 "5",
-                 "14"
+                 "0",
+                 "1",
+                 "2",
+                 "10"
                ]
              },
              {
@@ -435,9 +435,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "46",
-                 "48",
-                 "52",
+                 "47",
+                 "49",
+                 "53",
                  "60"
                ]
              },
@@ -446,10 +446,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "50",
-                 "47",
-                 "45",
-                 "43"
+                 "71",
+                 "64",
+                 "57",
+                 "50"
                ]
              }
            ]
