--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 28 09:05:03 2018</p>
+         Last Run: Sat Jul 28 10:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -34,10 +34,10 @@
                         <td>20</td>
                         <td>20</td>
                         <td>0</td>
-                        <td>47</td>
+                        <td>48</td>
                         <td>4</td>
                         <td>5</td>
-                        <td>SSE</td>
+                        <td>SE</td>
                         <td>4</td>
                      </tr>
                      <tr>
@@ -46,7 +46,7 @@
                         <td>21</td>
                         <td>21</td>
                         <td>0</td>
-                        <td>40</td>
+                        <td>41</td>
                         <td>5</td>
                         <td>5</td>
                         <td>SE</td>
@@ -58,11 +58,11 @@
                         <td>23</td>
                         <td>23</td>
                         <td>0</td>
-                        <td>33</td>
+                        <td>36</td>
                         <td>6</td>
-                        <td>6</td>
+                        <td>5</td>
                         <td>ESE</td>
-                        <td>12</td>
+                        <td>8</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -70,11 +70,11 @@
                         <td>24</td>
                         <td>24</td>
                         <td>0</td>
-                        <td>31</td>
+                        <td>30</td>
                         <td>7</td>
                         <td>8</td>
-                        <td>E</td>
-                        <td>14</td>
+                        <td>ENE</td>
+                        <td>12</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -84,9 +84,9 @@
                         <td>0</td>
                         <td>29</td>
                         <td>6</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>NE</td>
-                        <td>15</td>
+                        <td>12</td>
                      </tr>
                   </tbody>
                </table>
@@ -214,10 +214,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "47",
-                 "40",
-                 "33",
-                 "31",
+                 "48",
+                 "41",
+                 "36",
+                 "30",
                  "29"
                ]
              },
@@ -228,9 +228,9 @@
                "data":[
                  "4",
                  "6",
+                 "8",
                  "12",
-                 "14",
-                 "15"
+                 "12"
                ]
              }
            ]
@@ -248,7 +248,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 28 09:05:03 2018</p>
+         Last Run: Sat Jul 28 10:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -276,7 +276,7 @@
                         <td>50</td>
                         <td>1</td>
                         <td>16</td>
-                        <td>SE</td>
+                        <td>ESE</td>
                         <td>79</td>
                      </tr>
                      <tr>
