--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 29 01:05:03 2018</p>
+         Last Run: Sun Jul 29 02:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -34,10 +34,10 @@
                         <td>24</td>
                         <td>24</td>
                         <td>2</td>
-                        <td>49</td>
+                        <td>47</td>
                         <td>2</td>
                         <td>14</td>
-                        <td>SE</td>
+                        <td>ESE</td>
                         <td>43</td>
                      </tr>
                      <tr>
@@ -46,10 +46,10 @@
                         <td>23</td>
                         <td>23</td>
                         <td>0</td>
-                        <td>51</td>
+                        <td>49</td>
                         <td>1</td>
                         <td>14</td>
-                        <td>SE</td>
+                        <td>ESE</td>
                         <td>28</td>
                      </tr>
                      <tr>
@@ -58,7 +58,7 @@
                         <td>22</td>
                         <td>22</td>
                         <td>0</td>
-                        <td>53</td>
+                        <td>51</td>
                         <td>0</td>
                         <td>14</td>
                         <td>ESE</td>
@@ -70,7 +70,7 @@
                         <td>20</td>
                         <td>20</td>
                         <td>15</td>
-                        <td>63</td>
+                        <td>60</td>
                         <td>0</td>
                         <td>13</td>
                         <td>ESE</td>
@@ -197,10 +197,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "47",
                  "49",
                  "51",
-                 "53",
-                 "63"
+                 "60"
                ]
              },
              {
