--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 29 14:05:03 2018</p>
+         Last Run: Sun Jul 29 15:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -50,31 +50,31 @@
                         <td>1</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>22</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Clear</td>
-                        <td>22</td>
-                        <td>22</td>
+                        <td>Partly Cloudy</td>
+                        <td>23</td>
+                        <td>23</td>
                         <td>2</td>
-                        <td>52</td>
+                        <td>51</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>ESE</td>
-                        <td>29</td>
+                        <td>31</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>20</td>
-                        <td>20</td>
+                        <td>21</td>
+                        <td>21</td>
                         <td>15</td>
-                        <td>61</td>
+                        <td>60</td>
                         <td>0</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>43</td>
+                        <td>44</td>
                      </tr>
                   </tbody>
                </table>
@@ -121,8 +121,8 @@
                "data":[
                  "24",
                  "23",
-                 "22",
-                 "20"
+                 "23",
+                 "21"
                ]
              },
              {
@@ -133,8 +133,8 @@
                "data":[
                  "24",
                  "23",
-                 "22",
-                 "20"
+                 "23",
+                 "21"
                ]
              }
            ]
@@ -199,8 +199,8 @@
                "data":[
                  "48",
                  "49",
-                 "52",
-                 "61"
+                 "51",
+                 "60"
                ]
              },
              {
@@ -209,9 +209,9 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "26",
-                 "22",
-                 "29",
-                 "43"
+                 "23",
+                 "31",
+                 "44"
                ]
              }
            ]
