--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 29 16:05:04 2018</p>
+         Last Run: Sun Jul 29 17:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -54,7 +54,7 @@
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
                         <td>0</td>
@@ -62,19 +62,19 @@
                         <td>0</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>29</td>
+                        <td>30</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>20</td>
-                        <td>20</td>
+                        <td>21</td>
+                        <td>21</td>
                         <td>15</td>
                         <td>60</td>
                         <td>0</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>42</td>
+                        <td>43</td>
                      </tr>
                   </tbody>
                </table>
@@ -122,7 +122,7 @@
                  "24",
                  "23",
                  "22",
-                 "20"
+                 "21"
                ]
              },
              {
@@ -134,7 +134,7 @@
                  "24",
                  "23",
                  "22",
-                 "20"
+                 "21"
                ]
              }
            ]
@@ -210,8 +210,8 @@
                "data":[
                  "26",
                  "22",
-                 "29",
-                 "42"
+                 "30",
+                 "43"
                ]
              }
            ]
