--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 24 06:05:09 2018</p>
+         Last Run: Wed Oct 24 07:05:19 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Oct 24, 2018 -  8:00PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -34,35 +34,35 @@
                         <td>10</td>
                         <td>10</td>
                         <td>24</td>
-                        <td>52</td>
+                        <td>51</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>WNW</td>
-                        <td>65</td>
+                        <td>66</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Chance of Rain</td>
+                        <td>Mostly Cloudy</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>30</td>
+                        <td>24</td>
                         <td>59</td>
                         <td>0</td>
                         <td>13</td>
-                        <td>W</td>
-                        <td>69</td>
+                        <td>WNW</td>
+                        <td>70</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>8</td>
-                        <td>6</td>
-                        <td>18</td>
-                        <td>63</td>
+                        <td>7</td>
+                        <td>5</td>
+                        <td>16</td>
+                        <td>64</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>W</td>
-                        <td>70</td>
+                        <td>69</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -74,7 +74,7 @@
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>64</td>
+                        <td>63</td>
                      </tr>
                   </tbody>
                </table>
@@ -121,7 +121,7 @@
                "data":[
                  "10",
                  "6",
-                 "6",
+                 "5",
                  "5"
                ]
              },
@@ -133,7 +133,7 @@
                "data":[
                  "10",
                  "8",
-                 "8",
+                 "7",
                  "7"
                ]
              }
@@ -187,8 +187,8 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "24",
-                 "30",
-                 "18",
+                 "24",
+                 "16",
                  "14"
                ]
              },
@@ -197,9 +197,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "52",
+                 "51",
                  "59",
-                 "63",
+                 "64",
                  "68"
                ]
              },
@@ -208,10 +208,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "65",
-                 "69",
+                 "66",
                  "70",
-                 "64"
+                 "69",
+                 "63"
                ]
              }
            ]
