--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Oct 25 15:05:04 2018</p>
+         Last Run: Thu Oct 25 16:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Team Dinner - Watson's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Oct 27, 2018 -  4:00PM til  8:00PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>9</td>
                         <td>9</td>
                         <td>0</td>
-                        <td>28</td>
+                        <td>29</td>
                         <td>1</td>
                         <td>21</td>
                         <td>WNW</td>
-                        <td>6</td>
+                        <td>5</td>
                      </tr>
                      <tr>
                         <td>05:00 PM</td>
@@ -50,13 +50,13 @@
                         <td>0</td>
                         <td>18</td>
                         <td>WNW</td>
-                        <td>5</td>
+                        <td>4</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
                         <td>Clear</td>
-                        <td>8</td>
-                        <td>6</td>
+                        <td>7</td>
+                        <td>5</td>
                         <td>0</td>
                         <td>34</td>
                         <td>0</td>
@@ -67,14 +67,14 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
-                        <td>6</td>
-                        <td>3</td>
+                        <td>5</td>
+                        <td>2</td>
                         <td>0</td>
                         <td>39</td>
                         <td>0</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>1</td>
+                        <td>2</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -82,11 +82,11 @@
                         <td>4</td>
                         <td>1</td>
                         <td>0</td>
-                        <td>43</td>
+                        <td>44</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>3</td>
+                        <td>5</td>
                      </tr>
                   </tbody>
                </table>
@@ -134,8 +134,8 @@
                "data":[
                  "9",
                  "9",
-                 "6",
-                 "3",
+                 "5",
+                 "2",
                  "1"
                ]
              },
@@ -147,8 +147,8 @@
                "data":[
                  "9",
                  "9",
-                 "8",
-                 "6",
+                 "7",
+                 "5",
                  "4"
                ]
              }
@@ -214,11 +214,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "28",
+                 "29",
                  "30",
                  "34",
                  "39",
-                 "43"
+                 "44"
                ]
              },
              {
@@ -226,11 +226,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "6",
                  "5",
                  "4",
-                 "1",
-                 "3"
+                 "4",
+                 "2",
+                 "5"
                ]
              }
            ]
@@ -241,6 +241,206 @@
                                    };
                   var MyNewChart = new Chart(ctx).BarAlt(data,options);
                   document.getElementById("legend_chartHTMLReportGenerator2").innerHTML=MyNewChart.generateLegend();
+               </script>
+         <hr style="border-width:5px ">
+      </div>
+      <div style="padding:10px;border: 1px none black">
+         <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
+         <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
+         Last Run: Thu Oct 25 16:05:04 2018</p>
+               <H1 style="color:rgb(0,0,0)" class="text-center">Scrimmage - Andrew Sibbald School</H1>
+               <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Oct 28, 2018 - 10:30AM til 12:00PM</H4>
+               <table class="table table-striped">
+                  <thead>
+                     <tr>
+                        <th>Forecast Time</th>
+                        <th>Summary</th>
+                        <th>Temperture (°C)</th>
+                        <th>Feels Like (°C)</th>
+                        <th>POP (%)</th>
+                        <th>Humidity (%)</th>
+                        <th>UV</th>
+                        <th>Wind (km/hr)</th>
+                        <th>Wind Dir.</th>
+                        <th>Cloud Cover (%)</th>
+                     </tr>
+                  </thead>
+                  <tbody>
+                     <tr>
+                        <td>10:00 AM</td>
+                        <td>Overcast</td>
+                        <td>2</td>
+                        <td>-2</td>
+                        <td>24</td>
+                        <td>57</td>
+                        <td>0</td>
+                        <td>13</td>
+                        <td>SSE</td>
+                        <td>89</td>
+                     </tr>
+                     <tr>
+                        <td>11:00 AM</td>
+                        <td>Overcast</td>
+                        <td>4</td>
+                        <td>1</td>
+                        <td>15</td>
+                        <td>50</td>
+                        <td>1</td>
+                        <td>14</td>
+                        <td>SSE</td>
+                        <td>86</td>
+                     </tr>
+                     <tr>
+                        <td>12:00 PM</td>
+                        <td>Overcast</td>
+                        <td>5</td>
+                        <td>2</td>
+                        <td>17</td>
+                        <td>44</td>
+                        <td>1</td>
+                        <td>16</td>
+                        <td>SSE</td>
+                        <td>84</td>
+                     </tr>
+                  </tbody>
+               </table>
+               </style>
+               <div class="container-fluid">
+               	<div class="row">
+               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator3"></canvas><p><small>Date/Time</small></p></div>
+               		<div class="col-xs-4" id="legend_chartHTMLReportGenerator3" style="padding-left:75px;padding-top:25px"></div>
+               	</div>
+               </div>
+               <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js"></script>
+               <script>
+               Chart.types.Line.extend({
+         name: "LineAlt",
+         draw: function () {
+         Chart.types.Line.prototype.draw.apply(this, arguments);
+         var ctx = this.chart.ctx;
+         ctx.save();
+         ctx.textAlign = "center";
+         ctx.textBaseline = "bottom";
+         ctx.fillStyle = this.options.scaleFontColor;
+         this.scale.xScalePaddingLeft=100;
+         var x = this.scale.xScalePaddingLeft * 0.4;
+         var y = this.chart.height / 2;
+         ctx.translate(x, y);
+         ctx.rotate(-90 * Math.PI / 180);
+         ctx.fillText("Temp (C)", 0, 0);
+         ctx.restore();
+         }});
+                  var ctx = document.getElementById("chartHTMLReportGenerator3").getContext("2d");
+                  var data ={
+           "labels":[
+             "10:00 AM",
+             "11:00 AM",
+             "12:00 PM"
+           ],
+           "datasets":[
+             {
+               "label":"apparentTemperature",
+               "strokeColor":"rgba(92,0,141,1)",
+               "pointColor":"rgba(92,0,141,1)",
+               "fillColor":"rgba(92,0,141,0)",
+               "data":[
+                 "-2",
+                 "1",
+                 "2"
+               ]
+             },
+             {
+               "label":"temperature",
+               "strokeColor":"rgba(252,49,18,1)",
+               "pointColor":"rgba(252,49,18,1)",
+               "fillColor":"rgba(252,49,18,0)",
+               "data":[
+                 "2",
+                 "4",
+                 "5"
+               ]
+             }
+           ]
+         };
+                  var options = { responsive:true,
+                  				  multiTooltipTemplate: "<%=datasetLabel%> : <%= value %>",
+                    			      legendTemplate : '<% for (var i=0; i<datasets.length; i++) { %><div style=\"background-color:<%=datasets[i].fillColor%>;width:25px;height:25px;border-style:solid;border-color:<%=datasets[i].strokeColor%>;margin:5px\"><span style="color:rgba(0,0,0,0)">____</span><span><small><% if (datasets[i].label) { %><%= datasets[i].label %><% } %></small></span></div><% } %>'
+                                   };
+                  var MyNewChart = new Chart(ctx).LineAlt(data,options);
+                  document.getElementById("legend_chartHTMLReportGenerator3").innerHTML=MyNewChart.generateLegend();
+               </script>
+               </style>
+               <div class="container-fluid">
+               	<div class="row">
+               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator4"></canvas><p><small>Date/Time</small></p></div>
+               		<div class="col-xs-4" id="legend_chartHTMLReportGenerator4" style="padding-left:75px;padding-top:25px"></div>
+               	</div>
+               </div>
+               <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js"></script>
+               <script>
+               Chart.types.Bar.extend({
+         name: "BarAlt",
+         draw: function () {
+         Chart.types.Bar.prototype.draw.apply(this, arguments);
+         var ctx = this.chart.ctx;
+         ctx.save();
+         ctx.textAlign = "center";
+         ctx.textBaseline = "bottom";
+         ctx.fillStyle = this.options.scaleFontColor;
+         this.scale.xScalePaddingLeft=100;
+         var x = this.scale.xScalePaddingLeft * 0.4;
+         var y = this.chart.height / 2;
+         ctx.translate(x, y);
+         ctx.rotate(-90 * Math.PI / 180);
+         ctx.fillText("Percentage (%)", 0, 0);
+         ctx.restore();
+         }});
+                  var ctx = document.getElementById("chartHTMLReportGenerator4").getContext("2d");
+                  var data ={
+           "labels":[
+             "10:00 AM",
+             "11:00 AM",
+             "12:00 PM"
+           ],
+           "datasets":[
+             {
+               "label":"precipProbability",
+               "strokeColor":"rgba(0,0,255,1)",
+               "fillColor":"rgba(0,0,255,0.5)",
+               "data":[
+                 "24",
+                 "15",
+                 "17"
+               ]
+             },
+             {
+               "label":"humidity",
+               "strokeColor":"rgba(40,177,255,1)",
+               "fillColor":"rgba(40,177,255,0.5)",
+               "data":[
+                 "57",
+                 "50",
+                 "44"
+               ]
+             },
+             {
+               "label":"cloudCover",
+               "strokeColor":"rgba(233,37,255,1)",
+               "fillColor":"rgba(233,37,255,0.5)",
+               "data":[
+                 "89",
+                 "86",
+                 "84"
+               ]
+             }
+           ]
+         };
+                  var options = { responsive:true,
+                  				  multiTooltipTemplate: "<%=datasetLabel%> : <%= value %>",
+                    			      legendTemplate : '<% for (var i=0; i<datasets.length; i++) { %><div style=\"background-color:<%=datasets[i].fillColor%>;width:25px;height:25px;border-style:solid;border-color:<%=datasets[i].strokeColor%>;margin:5px\"><span style="color:rgba(0,0,0,0)">____</span><span><small><% if (datasets[i].label) { %><%= datasets[i].label %><% } %></small></span></div><% } %>'
+                                   };
+                  var MyNewChart = new Chart(ctx).BarAlt(data,options);
+                  document.getElementById("legend_chartHTMLReportGenerator4").innerHTML=MyNewChart.generateLegend();
                </script>
          <hr style="border-width:5px ">
       </div>
